[tool.poetry]
name = "rubix-app-modbus-py"
version = "1.0.0"
description = "Rubix App Modbus"
authors = ["NubeIO <tech-support@nube-io.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = "^20.0.4"
click = "^7.1.2"
rubix-http = { git = "https://github.com/NubeIO/rubix-http", rev = "v1.1.1" }
Flask-Migrate = "2.6.0"
rubix-mqtt = { git = "https://github.com/NubeIO/rubix-mqtt", rev = "v1.2.0" }
pymodbus = "^2.5.2"
shortuuid = "^1.0.1"
rubix-registry = {git = "https://github.com/NubeIO/rubix-registry", rev = "v1.1.1"}
gevent = "^21.8.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"
pytest = "^6.2.2"
Flask-Script = "2.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
